<resources>
    <string name="app_name">큐알 (QR Code)</string>
    <string name="input_address">입력하기 (Input)</string>
    <string name="create">create</string>
    <string name="rescan">다시 스캔하기\n(Re-Scan)</string>
    <string name="clipboard">Clipboard</string>
    <string name="save">저장(Save)</string>
    <string name="backward">돌아가기\n(Back)</string>
    <string name="qr_n_create_qr">QR코드 생성\n(Create QR)</string>
    <string name="qr_n_scan_qr">QR코드 스캔\n(Scan QR)</string>
    <string name="qr_code_title">큐알</string>
    <string name="load_image">Load Image</string>
</resources>
