<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="108dp"
        android:background="#9AFFFFFF"
        android:gravity="center"
        android:text="@string/qr_code_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/createQR"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:background="#B4FFFFFF"
            android:drawableLeft="@drawable/ic_create"
            android:paddingLeft="10dp"
            android:text="@string/qr_n_create_qr"
            android:textSize="24sp" />

        <Button
            android:id="@+id/scanQR"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:background="#B4FFFFFF"
            android:drawableLeft="@drawable/ic_linked_camera"
            android:paddingLeft="10dp"
            android:text="@string/qr_n_scan_qr"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>